# cosimo-idai-test

./: CHANGELOG_SESSION.md  PLAN_PAPER.md  README.md  agents.pptx  agents_factual_risk_audit.md  agents_factual_risk_audit_draft.md  pixi.toml  pptx_text.txt  ~$agents.pptx
robotics_maze/: README.md  pixi.toml  pyproject.toml  requirements.txt
robotics_maze/coordination/: AGENT_DASHBOARD.md  B1.md  B2.md  B3.md  B4.md  B5.md  B6.md  BACKLOG_SUMMARY.md  GUI_SETUP.md  GUI_VALIDATION.md  L1.md  R1.md  R10.md  R2.md  R3.md  R4.md  R5.md  R6.md  R7.md  R8.md  R9.md  README_LOG_AUDIT_2026-02-27.md  ROOT_PIXI.md  RUN_SIM_FROM_ROOT.md  S1.md  SC1.md  SC2.md  SC3.md  SESSION_TIMELINE.md  SUPERVISOR_FINALIZER.md  TASK_BOARD.md  agent_task_log.csv  figure_manifest.csv  session_event_log.csv  session_event_log_schema.md
robotics_maze/research/: R10_alt_methods_sota.md  R1_weighted_astar.md  R2_bidirectional_astar.md  R3_theta_star.md  R4_idastar.md  R5_jump_point_search.md  R6_lpa_star.md  R7_beam_search.md  R8_fringe_search.md  R9_bidirectional_bfs.md  github_issue_templates.md  post_2021_methods.md  pre_2021_methods.md  sota_planners_2021_plus.md
robotics_maze/results/: README.md  benchmark_results.csv  benchmark_summary.md  method_recommendation_verification.md  method_recommendation_verification_post2021_expanded.md  method_recommendation_verification_pre2021.md  method_recommendation_verification_pre2021_expanded.md
robotics_maze/scripts/: capture_regression_screenshots.py  check_backends.py  check_snapshot_tables.py  fetch_urdfs.py  fetch_urdfs.sh  (+4 more)
(+227 files in other folders)
